# fund-agent

./: .CLAUDE.md  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.server  Dockerfile.webhook  LICENSE  README.md  docker-compose.yml  ecosystem.config.js  package-lock.json  package.json  pnpm-lock.yaml  schema.sql  tsconfig.json
.claude/: settings.json
docs/: api-architecture.md  deployment.md
docs/plans/: 2026-05-31-portfolio-manager-upgrade.md
migrations/: 001_add_conversation_summary.ts  002_fund_cache.ts  003_add_financial_goal_columns.ts  004_price_alerts.ts
scripts/: register-discord-commands.ts
server/: main.py  pyproject.toml  run.py
src/: index.ts  webhook-entry.ts  webhook.ts
src/agents/: executor.ts  tools.ts
src/commands/: help.ts  market.ts  my.ts  new.ts
src/discord/: api.ts  verify.ts
src/history/: summary-history.ts
src/prompts/: index.ts  my-holdings.md  portfolio.md  startup-summary.md  system.md
src/services/: alerts.ts  allocation.ts  db.ts  fund-cache.ts  fund.ts  global.ts  manager.ts  migrations.ts  ocr.ts  portfolio.ts  redis.ts  search.ts  storage.ts  user.ts
src/tools/: index.ts
src/utils/: config.ts  http.ts  logger.ts
src/wecom/: api.ts  crypto.ts
