[project]
name = "ai-jijin-server"
version = "0.1.0"
description = "AKShare FastAPI service for ai-jijin"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.18.60",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
]

[tool.setuptools]
py-modules = ["main", "run"]

[tool.uv]
package = true

[project.scripts]
serve = "run:serve"
