[project]
name = "ai-fund-server"
version = "0.1.0"
description = "AKShare FastAPI service for ai-fund"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.18.60",
    "alibabacloud-ocr-api20210707>=3.1.3",
    "fastapi>=0.136.1",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "redis>=7.4.0",
    "requests>=2.32.0",
    "uvicorn[standard]>=0.47.0",
    "yfinance>=0.2.0",
]

[tool.setuptools]
py-modules = ["main", "run"]

[tool.uv]
package = true

[project.scripts]
serve = "run:serve"
